fix overflow

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ ul{
 
 .footer{
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     text-align: center;
-    width: 100%;
+    width: 99%;
 }
 
